--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,16 @@ environment:
   TEST_API_ENDPOINT: http://api.brain-map.org 
   TEST_COMPLETE: "false"
   TEST_BAMBOO: "false"
+  LIMS_DBNAME: "placeholder"
+  LIMS_USER: "placeholder"
+  LIMS_PORT: 1234
+  LIMS_HOST: "placeholder"
+  LIMS_PASSWORD: "placeholder"
+  MTRAIN_DBNAME: "placeholder"
+  MTRAIN_USER: "placeholder"
+  MTRAIN_HOST: "placeholder"
+  MTRAIN_PORT: 1234
+  MTRAIN_PASSWORD: "placeholder"
   matrix:
     - MINICONDA: "C:\\Miniconda36-x64"
       PYTHON: 3.6
@@ -19,6 +29,16 @@ environment:
 
 install:
   - set PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%
+  - set LIMS_DBNAME=placeholder
+  - set LIMS_USER=placeholder
+  - set LIMS_PORT=1234
+  - set LIMS_HOST=placeholder
+  - set LIMS_PASSWORD=placeholder
+  - set MTRAIN_DBNAME=placeholder
+  - set MTRAIN_USER=placeholder
+  - set MTRAIN_HOST=placeholder
+  - set MTRAIN_PASSWORD=placeholder
+  - set MTRAIN_PORT=1234
   - conda config --set always_yes yes --set changeps1 no
   - conda create -q -n test-environment python=%PYTHON% pip
   - activate test-environment
