--- a/allensdk/brain_observatory/nwb/AIBS_ophys_behavior_namespace.yaml
+++ b/allensdk/brain_observatory/nwb/AIBS_ophys_behavior_namespace.yaml
@@ -2,6 +2,7 @@ namespaces:
 - doc: "LabMetaData extensions: ['OphysBehaviorMetaData', 'OphysBehaviorTaskParameters']\
     \ (AIBS_ophys_behavior)"
   name: AIBS_ophys_behavior
+  version: 0.1.0
   schema:
   - namespace: core
   - source: AIBS_ophys_behavior_extension.yaml
