GH #1380: Make fake credentials public for CI builds.
Forks do not have access to environment variables in travis.
Making these fake credentials public solves build failure.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,16 @@ env:
     - TEST_API_ENDPOINT=http://api.brain-map.org 
     - TEST_COMPLETE=false
     - TEST_BAMBOO=false
+    - LIMS_DBNAME=db
+    - LIMS_PORT=1234
+    - LIMS_PASSWORD=password
+    - LIMS_HOST=host
+    - LIMS_USER=user
+    - MTRAIN_DBNAME=db
+    - MTRAIN_USER=user
+    - MTRAIN_HOST=host
+    - MTRAIN_PORT=1234
+    - MTRAIN_PASSWORD=password
 
 matrix:
   include:
