--- a/appveyor.yml
+++ b/appveyor.yml
@@ -45,7 +45,8 @@ install:
   - conda install statsmodels
   - pip install Pillow
   - pip install codecov
-  - pip install -r test_requirements.txt
+  - pip install -r requirements.txt -U
+  - pip install -r test_requirements.txt -U
   - pip install .
 
 test_script:
