--- a/allensdk/brain_observatory/ecephys/nwb/AIBS_ecephys_namespace.yaml
+++ b/allensdk/brain_observatory/ecephys/nwb/AIBS_ecephys_namespace.yaml
@@ -3,7 +3,7 @@ namespaces:
   version: 0.2.0
   name: AIBS_ecephys
   author: Allen Institute
-  email: waynew@alleninstitute.org
+  contact: waynew@alleninstitute.org
   schema:
   - namespace: core
   - source: AIBS_ecephys_extension.yaml
