--- a/allensdk/brain_observatory/nwb/AIBS_ophys_behavior_namespace.yaml
+++ b/allensdk/brain_observatory/nwb/AIBS_ophys_behavior_namespace.yaml
@@ -2,6 +2,8 @@ namespaces:
 - doc: "LabMetaData extensions: ['OphysBehaviorMetaData', 'OphysBehaviorTaskParameters']\
     \ (AIBS_ophys_behavior)"
   name: AIBS_ophys_behavior
+  author: Allen Institute for Brain Science
+  contact: "waynew@alleninstitute.org"
   version: 0.1.0
   schema:
   - namespace: core
