GH-1535 - Addressing small changes to Dockerfile
- Added Isaak as a maintainer
- Setting workdir to /usr/src/app
- Removing the quiet parameter during installs
- Updating AllenSDK notebooks to pull from master branch

--- a/docker/allensdk/Dockerfile
+++ b/docker/allensdk/Dockerfile
@@ -5,15 +5,19 @@
 #
 FROM continuumio/anaconda3
 
-WORKDIR /root
+LABEL maintainer="isaak.willett@alleninstitute.org"
+
+WORKDIR /usr/src/app
 
 # Add AllenSDK and NEURON libraries
-RUN pip install -q allensdk neuron
+RUN pip install allensdk neuron
+
 
 # Install NEURON
 RUN wget https://neuron.yale.edu/ftp/neuron/versions/v7.7/nrn-7.7.x86_64-linux.deb; \
 	dpkg -i nrn-7.7.x86_64-linux.deb; \
-	apt-get install -yq \
+	apt-get update; \
+	apt-get install -y \
 		make \
 		gcc \
 		build-essential \
@@ -22,8 +26,8 @@ RUN wget https://neuron.yale.edu/ftp/neuron/versions/v7.7/nrn-7.7.x86_64-linux.d
 		libx11-dev;
 
 # Setup example notebooks and python tests
-RUN wget https://github.com/AllenInstitute/AllenSDK/archive/rc/1.7.1.tar.gz; \
-	tar xvzf 1.7.1.tar.gz; \
-	mv AllenSDK-rc-1.7.1 allensdk; \
+RUN wget https://github.com/AllenInstitute/AllenSDK/archive/master.tar.gz; \
+	tar xvzf master.tar.gz; \
+	mv AllenSDK-master allensdk; \
 	cd allensdk; \
 	pip install -r test_requirements.txt; \
