--- a/allensdk/brain_observatory/nwb/ndx-aibs-behavior-ophys.extension.yaml
+++ b/allensdk/brain_observatory/nwb/ndx-aibs-behavior-ophys.extension.yaml
@@ -5,98 +5,82 @@ groups:
   attributes:
   - name: task
     dtype: text
-    doc: task
-  - name: stimulus_duration_sec
+    doc: The name of the behavioral task
+  - name: omitted_flash_fraction
     dtype: float
-    doc: duration of each stimulus presentation in seconds
-  - name: stage
-    dtype: text
-    doc: stage
-  - name: n_stimulus_frames
-    dtype: int
-    doc: n_stimulus_frames
-  - name: response_window_sec
-    dtype: text
-    shape:
-    - 2
-    doc: response_window in seconds
-  - name: stimulus_distribution
-    dtype: text
-    doc: stimulus_distribution
-  - name: stimulus
-    dtype: text
-    doc: stimulus
+    doc: Fraction of flashes/image presentations that were omitted
   - name: blank_duration_sec
     dtype: text
     shape:
     - 2
-    doc: blank duration in seconds
-  - name: omitted_flash_fraction
-    dtype: float
-    doc: omitted_flash_fraction
+    doc: The lower and upper bound (in seconds) for a randomly chosen inter-stimulus
+      interval duration for a trial
+  - name: n_stimulus_frames
+    dtype: int
+    doc: Total number of stimuli frames
+  - name: stimulus
+    dtype: text
+    doc: Stimulus type
+  - name: response_window_sec
+    dtype: text
+    shape:
+    - 2
+    doc: The lower and upper bound (in seconds) for a randomly chosen time window
+      where subject response influences trial outcome
+  - name: stimulus_distribution
+    dtype: text
+    doc: Distribution type of drawing change times (e.g. 'geometric', 'exponential')
   - name: reward_volume
     dtype: float
-    doc: reward_volume
+    doc: Volume of water (in mL) delivered as reward
+  - name: stimulus_duration_sec
+    dtype: float
+    doc: Duration of each stimulus presentation in seconds
+  - name: stage
+    dtype: text
+    doc: Stage of behavioral task
 - neurodata_type_def: BehaviorSubject
   neurodata_type_inc: Subject
   doc: Metadata for an AIBS behavior or behavior + ophys subject
   attributes:
-  - name: reporter_line
-    dtype: text
-    shape:
-    - null
-    doc: Reporter line of subject
   - name: driver_line
     dtype: text
     shape:
     - null
     doc: Driver line of subject
+  - name: reporter_line
+    dtype: text
+    shape:
+    - null
+    doc: Reporter line of subject
 - neurodata_type_def: OphysBehaviorMetadata
   neurodata_type_inc: LabMetaData
   doc: Metadata for behavior + ophys experiments
   attributes:
-  - name: session_type
-    dtype: text
-    doc: Experimental session description
-  - name: stimulus_frame_rate
-    dtype: float
-    doc: Frame rate (frames/second) of the visual_stimulus from the monitor
-  - name: excitation_lambda
-    dtype: float
-    doc: excitation_lambda
   - name: imaging_depth
     dtype: int
     doc: Depth (microns) below the cortical surface targeted for two-photon acquisition
-  - name: ophys_frame_rate
-    dtype: float
-    doc: Frame rate (frames/second) of the two-photon microscope
-  - name: experiment_container_id
-    dtype: int
-    doc: Container ID for the container that contains this ophys session
-  - name: field_of_view_width
-    dtype: int
-    doc: field_of_view_width
+  - name: session_type
+    dtype: text
+    doc: Experimental session description
+  - name: rig_name
+    dtype: text
+    doc: Name of optical physiology experiment rig
   - name: ophys_experiment_id
     dtype: int
     doc: Id for this ophys session
-  - name: experiment_datetime
-    dtype: text
-    doc: Date of the experiment (UTC, as string)
-  - name: field_of_view_height
+  - name: experiment_container_id
     dtype: int
-    doc: field_of_view_height
-  - name: emission_lambda
+    doc: Container ID for the container that contains this ophys session
+  - name: stimulus_frame_rate
     dtype: float
-    doc: emission_lambda
-  - name: targeted_structure
-    dtype: text
-    doc: Anatomical structure targeted for two-photon acquisition
+    doc: Frame rate (frames/second) of the visual_stimulus from the monitor
   - name: behavior_session_uuid
     dtype: text
     doc: MTrain record for session, also called foraging_id
-  - name: indicator
-    dtype: text
-    doc: indicator
-  - name: rig_name
-    dtype: text
-    doc: name of two-photon rig
+  - name: field_of_view_height
+    dtype: int
+    doc: Height of optical physiology imaging plane in pixels
+  - name: field_of_view_width
+    dtype: int
+    doc: Width of optical physiology imaging plane in pixels
