Revert Argschema version bump

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,8 @@ scikit-image>=0.14.0,<0.17.0
 scikit-build<1.0.0
 statsmodels==0.9.0
 simpleitk<2.0.0
-argschema==2.0.1
+argschema<2.0.0
+marshmallow==3.0.0rc6
 glymur==0.8.19
 xarray<0.16.0
 pynwb>=1.3.2,<2.0.0
