--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,22 @@ jobs:
     executor:
       name: python/default
       tag: "3.6.12"
+    environment:
+      TEST_NWB_FILES: skip
+      TEST_OBSERVATORY_EXPERIMENT_PLOTS_DATA: skip
+      TEST_API_ENDPOINT: http://api.brain-map.org
+      TEST_COMPLETE: false
+      TEST_BAMBOO: false
+      LIMS_DBNAME: db
+      LIMS_PORT: 1234
+      LIMS_PASSWORD: password
+      LIMS_HOST: host
+      LIMS_USER: user
+      MTRAIN_DBNAME: db
+      MTRAIN_USER: user
+      MTRAIN_HOST: host
+      MTRAIN_PORT: 1234
+      MTRAIN_PASSWORD: password
     steps:
       - checkout
       - run:
