--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
           name: Install
       - run:
           command: |
-            python -m pytest -n 4 --durations=0 --cov allensdk --cov-report xml
+            python -m pytest -n 4 --cov allensdk --cov-report xml
             bash <(curl -s https://codecov.io/bash) -t ${CODECOV_TOKEN}
           name: Test
     
