removes travis linux builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,14 +24,6 @@ env:
 
 matrix:
   include:
-    - os: linux
-      sudo: required
-      python: 3.6
-      env: TEST_PYTHON_VERSION=3.6
-    - os: linux
-      sudo: required
-      python: 3.7
-      env: TEST_PYTHON_VERSION=3.7.3
     - os: osx
       language: generic
       env: TEST_PYTHON_VERSION=3.6
@@ -40,13 +32,8 @@ matrix:
       env: TEST_PYTHON_VERSION=3.7
 
 install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-      sudo apt-get update;
-      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-    else
-      brew update;
-      wget https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O miniconda.sh;
-    fi
+  - brew update
+  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O miniconda.sh
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
