--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,20 @@ jobs:
     executor:
       name: python/default
       tag: "3.7.7"
+ 
+  lint:
+    executor: python/default
+    steps:
+      - checkout
+      - run:
+          command: |
+            pip install flake8
+            # `|| true` to force exit code 0 even if no files found
+            CHANGED_PYFILES=$(git diff --name-only --diff-filter AM origin/master | grep .py || true)
+            echo "List of changed files:"
+            echo ${CHANGED_PYFILES}
+            echo ${CHANGED_PYFILES} | xargs -r flake8 --count
+          name: Lint
 
 orbs:
   python: circleci/python@1.3.2
@@ -47,5 +61,6 @@ version: 2.1
 workflows:
   main:
     jobs:
+      - lint
       - linux-py36
       - linux-py37
