rerun extension builder to update yaml

--- a/allensdk/brain_observatory/behavior/nwb/extensions/event_detection/ndx-event-detection.namespace.yaml
+++ b/allensdk/brain_observatory/behavior/nwb/extensions/event_detection/ndx-event-detection.namespace.yaml
@@ -1,8 +1,8 @@
 namespaces:
 - author:
-  - Adam Amster
+  - Wayne Wakeman
   contact:
-  - aamster@alleninstitute.org
+  - waynew@alleninstitute.org
   doc: Store the event detection output
   name: ndx-event-detection
   schema:
