--- a/allensdk/brain_observatory/nwb/ndx-aibs-behavior-ophys.extension.yaml
+++ b/allensdk/brain_observatory/nwb/ndx-aibs-behavior-ophys.extension.yaml
@@ -3,42 +3,42 @@ groups:
   neurodata_type_inc: LabMetaData
   doc: Metadata for behavior or behavior + ophys task parameters
   attributes:
-  - name: reward_volume
-    dtype: float
-    doc: Volume of water (in mL) delivered as reward
-  - name: stimulus_distribution
-    dtype: text
-    doc: Distribution type of drawing change times (e.g. 'geometric', 'exponential')
   - name: n_stimulus_frames
     dtype: int
     doc: Total number of stimuli frames
-  - name: stimulus_duration_sec
-    dtype: float
-    doc: Duration of each stimulus presentation in seconds
-  - name: stage
+  - name: stimulus_distribution
     dtype: text
-    doc: Stage of behavioral task
-  - name: omitted_flash_fraction
-    dtype: float
-    doc: Fraction of flashes/image presentations that were omitted
-  - name: response_window_sec
-    dtype: text
-    shape:
-    - 2
-    doc: The lower and upper bound (in seconds) for a randomly chosen time window
-      where subject response influences trial outcome
-  - name: task
-    dtype: text
-    doc: The name of the behavioral task
-  - name: stimulus
-    dtype: text
-    doc: Stimulus type
+    doc: Distribution type of drawing change times (e.g. 'geometric', 'exponential')
   - name: blank_duration_sec
     dtype: text
     shape:
     - 2
     doc: The lower and upper bound (in seconds) for a randomly chosen inter-stimulus
       interval duration for a trial
+  - name: task
+    dtype: text
+    doc: The name of the behavioral task
+  - name: reward_volume
+    dtype: float
+    doc: Volume of water (in mL) delivered as reward
+  - name: stimulus_duration_sec
+    dtype: float
+    doc: Duration of each stimulus presentation in seconds
+  - name: stimulus
+    dtype: text
+    doc: Stimulus type
+  - name: response_window_sec
+    dtype: text
+    shape:
+    - 2
+    doc: The lower and upper bound (in seconds) for a randomly chosen time window
+      where subject response influences trial outcome
+  - name: stage
+    dtype: text
+    doc: Stage of behavioral task
+  - name: omitted_flash_fraction
+    dtype: float
+    doc: Fraction of flashes/image presentations that were omitted
 - neurodata_type_def: BehaviorSubject
   neurodata_type_inc: Subject
   doc: Metadata for an AIBS behavior or behavior + ophys subject
@@ -60,46 +60,63 @@ groups:
   - name: behavior_session_uuid
     dtype: text
     doc: MTrain record for session, also called foraging_id
-  - name: session_type
-    dtype: text
-    doc: Experimental session description
+  - name: behavior_session_id
+    dtype: int
+    doc: The unique ID for the behavior session
   - name: stimulus_frame_rate
     dtype: float
     doc: Frame rate (frames/second) of the visual_stimulus from the monitor
   - name: rig_name
     dtype: text
     doc: Name of behavior or optical physiology experiment rig
+  - name: session_type
+    dtype: text
+    doc: Experimental session description
 - neurodata_type_def: OphysBehaviorMetadata
   neurodata_type_inc: BehaviorMetadata
   doc: Metadata for behavior + ophys experiments
   attributes:
-  - name: field_of_view_height
+  - name: behavior_session_id
     dtype: int
-    doc: Height of optical physiology imaging plane in pixels
-  - name: behavior_session_uuid
-    dtype: text
-    doc: MTrain record for session, also called foraging_id
+    doc: The unique ID for the behavior session
+  - name: imaging_plane_group
+    dtype: int
+    doc: A numeric index which indicates the order that an imaging plane was acquired
+      for a mesoscope experiment. Will be None for non-mesoscope data
   - name: session_type
     dtype: text
     doc: Experimental session description
-  - name: stimulus_frame_rate
-    dtype: float
-    doc: Frame rate (frames/second) of the visual_stimulus from the monitor
-  - name: experiment_container_id
-    dtype: int
-    doc: Container ID for the container that contains this ophys session
-  - name: imaging_depth
-    dtype: int
-    doc: Depth (microns) below the cortical surface targeted for two-photon acquisition
-  - name: ophys_experiment_id
-    dtype: int
-    doc: Id for this ophys session
-  - name: rig_name
-    dtype: text
-    doc: Name of behavior or optical physiology experiment rig
   - name: field_of_view_width
     dtype: int
     doc: Width of optical physiology imaging plane in pixels
+  - name: imaging_plane_group_count
+    dtype: int
+    doc: The total number of plane groups collected in a session for a mesoscope experiment.
+      Will be 0 if the scope did not capture multiple concurrent imaging planes.
+  - name: ophys_session_id
+    dtype: int
+    doc: Unique ID for the ophys session
+  - name: behavior_session_uuid
+    dtype: text
+    doc: MTrain record for session, also called foraging_id
+  - name: ophys_experiment_id
+    dtype: int
+    doc: Unique ID for the ophys experiment (aka imaging plane)
+  - name: rig_name
+    dtype: text
+    doc: Name of behavior or optical physiology experiment rig
+  - name: imaging_depth
+    dtype: int
+    doc: Depth (microns) below the cortical surface targeted for two-photon acquisition
+  - name: field_of_view_height
+    dtype: int
+    doc: Height of optical physiology imaging plane in pixels
+  - name: experiment_container_id
+    dtype: int
+    doc: Container ID for the container that contains this ophys session
+  - name: stimulus_frame_rate
+    dtype: float
+    doc: Frame rate (frames/second) of the visual_stimulus from the monitor
 - neurodata_type_def: OphysEyeTrackingRigMetadata
   neurodata_type_inc: NWBDataInterface
   doc: Metadata for ophys experiment rig
