applies same blink masking to cornea and eye as pupil, applies to nwb i/o

--- a/allensdk/brain_observatory/nwb/eye_tracking/ndx-ellipse-eye-tracking.extensions.yaml
+++ b/allensdk/brain_observatory/nwb/eye_tracking/ndx-ellipse-eye-tracking.extensions.yaml
@@ -17,6 +17,11 @@ groups:
     shape:
     - null
     doc: ellipse area
+  - name: area_raw
+    dtype: float
+    shape:
+    - null
+    doc: ellipse area
   - name: width
     dtype: float
     shape:
