temporarily disable lint

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,7 +105,9 @@ version: 2.1
 workflows:
   main:
     jobs:
-      - lint
+      # disable lint build, for merge to default branch
+      # turn back on when rc/2.8.0 is started
+      # - lint
       - linux-py36
       - linux-py37
       # disabled osx build. covered by github-actions
