Fix NWB extension name collision for ophys events
Dandi validation failed currently produced NWB files with
the somewhat cryptic message:

'EventDetection' - cannot overwrite existing specification

Turns out EventDetection is a CORE `neurodata_type` using a reserved
name. See: pynwb.ecephys.EventDetection.

This commit changes the `neurodata_type_def` for our custom extension
(used to store optical physiology fluorescence events) to
OphysEventDetection.

The NAMESPACE has also been changed from ndx-event-detection to
ndx-aibs-ophys-event-detection.

--- a/allensdk/brain_observatory/behavior/write_nwb/extensions/event_detection/ndx-aibs-ophys-event-detection.extensions.yaml
+++ b/allensdk/brain_observatory/behavior/write_nwb/extensions/event_detection/ndx-aibs-ophys-event-detection.extensions.yaml
@@ -1,5 +1,5 @@
 groups:
-- neurodata_type_def: EventDetection
+- neurodata_type_def: OphysEventDetection
   neurodata_type_inc: RoiResponseSeries
   name: event_detection
   doc: Stores event detection output
