rename experiment_container_id -> ophys_container_id for consistency
this extends the change from PR #2501 to include the data object
and relevant properties of metadata objects

--- a/allensdk/brain_observatory/nwb/ndx-aibs-behavior-ophys.extension.yaml
+++ b/allensdk/brain_observatory/nwb/ndx-aibs-behavior-ophys.extension.yaml
@@ -77,7 +77,7 @@ groups:
   neurodata_type_inc: BehaviorMetadata
   doc: Metadata for behavior + ophys experiments
   attributes:
-  - name: experiment_container_id
+  - name: ophys_container_id
     dtype: int
     doc: Container ID for the container that contains this ophys session
   - name: behavior_session_id
