Adds script to run notebooks and catch any errors The notebooks parameterize the output_dir to manage files output by the notebook Moves behavior_ophys_session notebook to internal since it can only be run internally
Adds github actions to run the notebook runner

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -3,6 +3,7 @@ on:
   schedule:
     - cron: '05 6 * * *'
 
+
 jobs:
   onprem:
     name: python ${{ matrix.image }} on-prem test
@@ -10,7 +11,7 @@ jobs:
     strategy:
       matrix:
         image: ["allensdk_local_py37:latest"]
-        branch: ["master", "rc/2.16.1"]
+        branch: ["master", "rc/**"]
     steps:
       - uses: actions/checkout@v2
         with:
