Force push notebooks

--- a/.github/workflows/notebook_runner.yml
+++ b/.github/workflows/notebook_runner.yml
@@ -32,4 +32,5 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Update notebooks
+          push_options: --force
           file_pattern: '*.ipynb'
