Suppress many flake8 warnings that are stylistic
Add E742 and E743 to ignore list - ambiguous variable names are OK in math-y code

F841 — Unused variables (8) These are all tuple unpacking with _-prefixed names
like _i_prev, _t_prev, _r_prev and except Exception as _:. The convention
communicates intent.

F401 — Unused imports (14) These are re-exports in __init__.py files,
moviepy.editor import * for side effects, and json_utilities re-export. Standard
pattern.

E721 — Type comparison (15) Most are type(self) != type(other) in __eq__ methods
or exact type dispatch where isinstance would have different semantics (matching
subclasses)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,6 +118,8 @@ line-length = 120
 ignore = [
     "E402",   # module-level import not at top of file
     "E741",   # ambiguous variable name (l, O, I, etc.)
+    "E742",   # ambiguous class name
+    "E743",   # ambiguous function name
     "F403",   # wildcard import used
     "F405",   # name may be undefined from wildcard import
 ]
